kubernetes/restic/template-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: restic-template-server
  labels:
    app.kubernetes.io/instance: restic
    app.kubernetes.io/name: restic-template-server
    app.kubernetes.io/component: restic-template-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: restic-template-server
      app.kubernetes.io/component: restic-template-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: restic
        app.kubernetes.io/name: restic-template-server
        app.kubernetes.io/component: restic-template-server
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8000'
        prometheus.io/path: '/metrics'
        reloader.stakater.com/auto: 'true'
    spec:
      automountServiceAccountToken: false
      containers:
      - name: rest-server
        image: restic/rest-server:0.14.0@sha256:d2aff06f47eb38637dff580c3e6bce4af98f386c396a25d32eb6727ec96214a5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        ports:
        - name: http
          containerPort: 8000
        volumeMounts:
        - name: repos
          mountPath: /repos
          readOnly: true
        readinessProbe:
          httpGet:
            path: /v1/config
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: repos
        nfs:
          server: fs2.oneill.net
          path: /volume2/backups/restic/repos
          readOnly: true
