kubernetes/restic/template-server/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: restic-template-server
  labels:
    app.kubernetes.io/instance: restic
    app.kubernetes.io/name: restic-template-server
    app.kubernetes.io/component: restic-template-server

spec:
  selector:
    app.kubernetes.io/component: restic-template-server
  ports:
  - name: http
    port: 8000
    targetPort: http
