kubernetes/restic/template-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: restic-template-server
  labels:
    app.kubernetes.io/instance: restic
    app.kubernetes.io/name: restic-template-server
    app.kubernetes.io/component: restic-template-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  tls:
  - hosts:
    - restic-template.k.oneill.net
    secretName: restic-template-server-tls
  rules:
  - host: restic-template.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restic-template-server
            port:
              number: 8000
