kubernetes/restic/template-server/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: restic-template-server-tailscale
  labels:
    app.kubernetes.io/instance: restic
    app.kubernetes.io/name: restic-template-server
    app.kubernetes.io/component: restic-template-server
  annotations:
    tailscale.com/tags: tag:restic

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: restic-template-server
      port:
        number: 8000
  tls:
  - hosts:
    - restic-template
